--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Paragraf</p>
+    <p>Paragraf pierwszy</p>
+    <p>Paragraf trzeci</p>
 </body>
 </html>
